perbaiki link ig

--- a/index.html
+++ b/index.html
@@ -189,12 +189,7 @@
     <footer class="bg-primary text-white text-center pb-4">
       <p>
         Created with <i class="bi bi-heart-fill text-danger"></i> by
-        <a
-          href="https://www.instagram.com/
-        zeldaababil19/"
-          class="text-white fw-bold"
-          >Zelda Ababil</a
-        >
+        <a href="https://www.instagram.com/zeldaababil19/" class="text-white fw-bold">Zelda Ababil</a>
       </p>
     </footer>
     <!-- Akhir Footer -->
