--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
-    <form name="submit-to-google-sheet">
+    <!-- <form name="submit-to-google-sheet">
       <input name="email" type="email" placeholder="Email" required />
       <button type="submit">Send</button>
-    </form>
+    </form> -->
 
     <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbz4fXFQtj0kh2wnTyaNCPO3mwtgqF8DWf5K9tnt06wRGppDLUFukL6Gt6KZ-PC8rMkKsA/exec';
